❌ REMOVE: eliminados dependencias de css y fonts

--- a/docs/.vuepress/styles/styles.scss
+++ b/docs/.vuepress/styles/styles.scss
@@ -2,6 +2,10 @@ $color-primary: #1e88e5;
 $color-primary-dark: #1976D2;
 $black: #000;
 
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
 .theme-container.content-page-w100 {
   .page {
     .theme-default-content {
