👌 IMPROVE: cambios menores

--- a/docs/.vuepress/styles/styles.scss
+++ b/docs/.vuepress/styles/styles.scss
@@ -88,3 +88,7 @@ h1, h2, h3, h4, h5, h6 {
 .page-edit .last-updated .time {
   color: var(--secondary) !important;
 }
+
+.btn {
+  text-decoration: none !important;
+}
