--- a/docs/.vuepress/styles/styles.scss
+++ b/docs/.vuepress/styles/styles.scss
@@ -47,6 +47,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .sidebar {
+
+  .sidebar-links {
+    li:not(:first-child) {
+      margin-top: 0 !important;
+    }
+  }
+
   a {
     text-decoration: none;
 
